Use a unique token for PKG_CHECK_MODULES. Otherwise, if you use a global     configure cache, you cache it, and the cached value is probably wrong.

--- a/Makefile.am
+++ b/Makefile.am
@@ -21,8 +21,8 @@
 
 bin_PROGRAMS = xwud
 
-xwud_CFLAGS = $(DEP_CFLAGS)
-xwud_LDADD = $(DEP_LIBS)
+xwud_CFLAGS = $(XWUD_CFLAGS)
+xwud_LDADD = $(XWUD_LIBS)
 
 xwud_SOURCES =	\
         xwud.c
