--- a/configure.ac
+++ b/configure.ac
@@ -36,6 +36,7 @@ PKG_CHECK_MODULES(XWUD, x11)
 AC_SUBST(XWUD_CFLAGS)
 AC_SUBST(XWUD_LIBS)
 
+XORG_MANPAGE_SECTIONS
 XORG_RELEASE_VERSION
 
 AC_OUTPUT([Makefile])
