--- a/Makefile.am
+++ b/Makefile.am
@@ -21,7 +21,7 @@
 
 bin_PROGRAMS = xwud
 
-xwud_CFLAGS = $(XWUD_CFLAGS)
+AM_CFLAGS = $(CWARNFLAGS) $(XWUD_CFLAGS)
 xwud_LDADD = $(XWUD_LIBS)
 
 xwud_SOURCES =	\
@@ -60,7 +60,7 @@ MAN_SUBSTS = \
 SUFFIXES = .$(APP_MAN_SUFFIX) .man
 
 .man.$(APP_MAN_SUFFIX):
-	sed $(MAN_SUBSTS) < $< > $@
+	$(AM_V_GEN)$(SED) $(MAN_SUBSTS) < $< > $@
 
 EXTRA_DIST += ChangeLog
 MAINTAINERCLEANFILES = ChangeLog
